--- a/package.json
+++ b/package.json
@@ -3,27 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/third-parties": "^14.2.14",
+    "@next/third-parties": "15.0.1",
+    "clsx": "^2.1.1",
     "formik": "^2.4.6",
-    "next": "^14.2.14",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^15.0.2-canary.8",
+    "react": "^19.0.0-rc-cae764ce-20241025",
+    "react-dom": "^19.0.0-rc-cae764ce-20241025",
     "react-google-recaptcha": "^3.1.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "@types/react-google-recaptcha": "^2.1.9",
     "eslint": "^8",
-    "eslint-config-next": "14.2.14",
+    "eslint-config-next": "^15.0.0-rc.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   }
 }
