--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@next/third-parties": "15.0.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.3.0",
+    "embla-carousel-react": "^8.3.0",
     "formik": "^2.4.6",
     "next": "^15.0.2-canary.8",
     "react": "^19.0.0-rc-cae764ce-20241025",
