--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
   },
   "dependencies": {
     "@next/third-parties": "15.0.1",
+    "bright": "^0.8.5",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
     "formik": "^2.4.6",
+    "gray-matter": "^4.0.3",
     "next": "^15.0.2-canary.8",
+    "next-mdx-remote": "^5.0.0",
     "react": "^19.0.0-rc-cae764ce-20241025",
     "react-dom": "^19.0.0-rc-cae764ce-20241025",
     "react-google-recaptcha": "^3.1.0",
-    "yup": "^1.4.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "remark-toc": "^9.0.0",
-    "next-mdx-remote": "^5.0.0",
-    "bright": "^0.8.5",
-    "gray-matter": "^4.0.3"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@fec/remark-a11y-emoji": "^4.0.2",
@@ -35,6 +35,7 @@
     "@types/react-google-recaptcha": "^2.1.9",
     "eslint": "^8",
     "eslint-config-next": "^15.0.0-rc.1",
+    "schema-dts": "^1.1.2",
     "typescript": "^5"
   },
   "overrides": {
