--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*/**/*.{js,jsx,ts,tsx}": [
+      "prettier --write",
+      "next lint --fix"
+    ]
   },
   "dependencies": {
     "@next/third-parties": "15.0.1",
@@ -35,6 +42,9 @@
     "@types/react-google-recaptcha": "^2.1.9",
     "eslint": "^8",
     "eslint-config-next": "^15.0.0-rc.1",
+    "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.2.10",
     "schema-dts": "^1.1.2",
     "typescript": "^5"
   },
